tests/baselines/reference/ES5For-ofTypeCheck5(target=es2015).errors.txt
ES5For-ofTypeCheck5.ts(2,15): error TS2454: Variable 'union' is used before being assigned.


==== ES5For-ofTypeCheck5.ts (1 errors) ====
    var union: string | number[];
    for (var v of union) { }
                  ~~~~~
!!! error TS2454: Variable 'union' is used before being assigned.